# cargo-open

./: .travis.yml  Cargo.toml  README.md
src/: main.rs
tests/: tests.rs
