[package]
name = "cargo-open"
version = "0.3.0"
authors = ["Carol (Nichols || Goulding) <carol.nichols@gmail.com>"]
readme = "README.md"
repository = "https://github.com/carols10cents/cargo-open"
homepage = "https://github.com/carols10cents/cargo-open"
license = "MIT/Apache-2.0"
description = "A third-party cargo extension to allow you to open a dependent crate in your $EDITOR"

[[bin]]
name = "cargo-open"

[dependencies]
clap = "*"
cargo = "0.5.0"
