[package]
name = "cargo-open"
version = "0.4.0"
authors = ["Carol (Nichols || Goulding) <carol.nichols@gmail.com>"]
readme = "README.md"
repository = "https://github.com/carols10cents/cargo-open"
homepage = "https://github.com/carols10cents/cargo-open"
license = "MIT/Apache-2.0"
description = "A third-party cargo extension to allow you to open a dependent crate in your $EDITOR"
edition = "2018"

[[bin]]
name = "cargo-open"

[dependencies]
clap = "2.33"
cargo = "0.37.0"
dirs = "2.0"
